[tool.poetry]
name = "rl_policy_gradient"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
loguru = "^0.7.2"
torch = "^2.2.1"
mujoco = "2.3.7"
stable-baselines3 = "^2.3.2"
imageio = "^2.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
